Move app RPCs into TypeScript backend
